--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;URL=http://zillowmanager.site44.com">
+    <meta http-equiv="refresh" content="0;URL=http://zillowteam.site44.com">
 </noscript>
         <script language="javascript">
             <title>Redirecting...</title>
-</head>
+    </head>
 <body onload="location.replace(document.getElementsByTagName('meta')[1].content.slice(6))">
   <noscript><p>Redirecting...</p></noscript>
 </body>
